Build portfolio section

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 	<section id="home" class="jumbotron">
 		<div class="container jumbo">
-			<div class="container navbar">
+			<nav class="container navbar">
 				<div class="navbar-header">
                 	<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
                     	<span class="sr-only">Toggle navigation</span>
@@ -21,23 +21,99 @@
                     	<span class="icon-bar"></span>
                     	<span class="icon-bar"></span>
                 	</button>
-                	<a class="navbar-brand" href="#">Magda Balun</a>
+                	<a class="navbar-brand" href="#">MB</a>
             	</div>
             	<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 					<ul class="nav navbar-nav">
 						<li><a href="#home">Home<span class="sr-only"></span></a></li>
 						<li><a href="#aboutMe">About me</a></li>
-						<li><a href="#technologies">Technologies&tools</a></li>
-						<li><a href="#portfolio">Portfolio</a></li>
+						<li><a href="#skills">Skills</a></li>
+						<li><a href="#works">Works</a></li>
 						<li><a href="#contact">Contact</a></li>
 					</ul>
 				</div
-			</div>
+			</nav>
 			<div class="container slogan">
 				<h1>Front-end developer</h1>
 				<p>Magda Balun</p>
 			</div>
 		</div>
+	</section>
+	<section id="aboutMe" class="about_Me">
+		<div class="row about">
+			<div class="col-6 col-m-6 col-s-12 photo">
+				<img src="./img/myPhoto.jpg" alt="my photo">
+			</div>
+			<div class="col-6 col-m-6 col-s-12 about_text">
+				<h2>About me</h2>
+				<p>
+					Programming is my passion, that's why I decided to change my professional life by 360 degrees and make my dream come true. 
+					I love learning new things, meet new people and build future with them. I know I have a lot of things to learn. 
+					This is a challenge which I’m happy about.
+				</p>
+			</div>
+		</div>
+	</section>
+	<section id="skills" class="my_skills">
+		<h2>My skills</h2>
+		<div class="container skills">
+    		<div class="row">
+    			<div class="col col-3 col-m-3 col-s-3">
+    				<img src="./img/html.png" alt="html">
+    			</div>
+    			<div class="col col-3 col-m-3 col-s-3">
+    				<img src="./img/css.png" alt="css">
+    			</div>
+    			<div class="col col-3 col-m-3 col-s-3">
+    				<img src="./img/js.png" alt="js">
+    			</div>
+    			<div class="col col-3 col-m-3 col-s-3">
+    				<img src="./img/jquery.png" alt="jquery">
+    			</div>
+    		</div>
+    		<div class="row">
+    			<div class="col col-3 col-m-3 col-s-3">
+    				<img src="./img/rwd.png" alt="rwd">
+    			</div>
+    			<div class="col col-3 col-m-3 col-s-3">
+    				<img src="./img/sass.jpg" alt="sass">
+    			</div>
+    			<div class="col col-3 col-m-3 col-s-3">
+    				<img src="./img/bootstrap.png" alt="bootstrap">
+    			</div>
+    			<div class="col col-3 col-m-3 col-s-3">
+    				<img src="./img/es6.png" alt="es6">
+    			</div>
+    		</div>
+    		<div class="row">
+    			<div class="col col-3 col-m-3 col-s-3">
+    				<img src="./img/ajax.jpg" alt="ajax">
+    			</div>
+    			<div class="col col-3 col-m-3 col-s-3">
+    				<img src="./img/node.jpg" alt="node">
+    			</div>
+    			<div class="col col-3 col-m-3 col-s-3">
+    				<img src="./img/react.png" alt="react">
+    			</div>
+    			<div class="col col-3 col-m-3 col-s-3">
+    				<img src="./img/redux.png" alt="redux">
+    			</div>
+    		</div>
+    		<div class="row">
+    			<div class="col col-3 col-m-3 col-s-3">
+    				<img src="./img/git.png" alt="git">
+    			</div>
+    			<div class="col col-3 col-m-3 col-s-3">
+    				<img src="./img/npm.png" alt="npm">
+    			</div>
+    			<div class="col col-3 col-m-3 col-s-3">
+    				<img src="./img/mern.png" alt="mern">
+    			</div>
+    			<div class="col col-3 col-m-3 col-s-3">
+    				<img src="./img/mongo.jpg" alt="mongo">
+    			</div>
+    		</div>
+   		</div>
 	</section>
 	<!-- <script src="scripts.js"></script> -->
 </body>
