Add works section andchange visualization

--- a/index.html
+++ b/index.html
@@ -121,86 +121,75 @@
 		<h2>My project</h2>
 		<div class="container project">
     		<div class="row_2">
-    			<div class="describe">
-    				<h2>My Web Site</h2>
-    				<p>
-    					Website made by me. Used technologies: HTML5, CSS3, JS
-    				</p>
-    			</div>
     			<div class="picture">
     				<div class="layer_gal">
-   						<i class="fa fa-search"></i>
-						<i class="fa fa-eye"></i>
+   						<h2>My Web Site</h2>
+    					<p>
+    						Website made by me. Used technologies: HTML5, CSS3, JS
+    					</p>
+    					<i class="fa fa-search fa-2x"></i>
+						<i class="fa fa-eye fa-2x"></i>
   					</div>
     				<img src="./img/project1.jpg" alt="My web site">
     			</div>
-    		</div>
-    		<div class="row_2">
-    			<div class="describe">
-    				<h2>Picture Perfect</h2>
-    				<p>The first independent project to encode the .psd file to HTML / CSS template. 
-    					Applied technologies: HTML, CSS, RWD, GRID.
-    				</p>
-    			</div>
-    			<div class="img">
-   						<div class="layer_gal">
-   							<i class="fa fa-search"></i>
-							<i class="fa fa-eye"></i>
-  						</div>
-   						<img src="https://images.pexels.com/photos/220762/pexels-photo-220762.jpeg?h=350&auto=compress&cs=tinysrgb" alt="">
-   					</div>
-    		</div>
-    		<div class="row_2">
-    			<div class="describe">
-    				<h2>Your Life</h2>
-    				<p>
-    					The independent project to encode the .psd file to HTML/CSS and JavaScript template. 
-    					Applied technologies: HTML, CSS, RWD, GRID, JavaScript.
-    				</p>
-    			</div>
     			<div class="picture">
     				<div class="layer_gal">
-   						<i class="fa fa-search"></i>
-						<i class="fa fa-eye"></i>
+   						<h2>Picture Perfect</h2>
+    					<p>
+    						The first independent project to encode the .psd file to HTML / CSS template. 
+    						Applied technologies: HTML, CSS, RWD, GRID.
+    					</p>
+    					<i class="fa fa-search fa-2x"></i>
+						<i class="fa fa-eye fa-2x"></i>
+  					</div>
+    				<img src="./img/project1.jpg" alt="PicturePerfect">
+    			</div>
+    		</div>
+    		<div class="row_2">
+    			<div class="picture">
+    				<div class="layer_gal">
+   						<h2>Your Life</h2>
+    					<p>
+    						The independent project to encode the .psd file to HTML/CSS and JavaScript template. 
+    						Applied technologies: HTML, CSS, RWD, GRID, JavaScript.
+    					</p>
+    					<i class="fa fa-search fa-2x"></i>
+						<i class="fa fa-eye fa-2x"></i>
   					</div>
     				<img src="./img/project2.jpg" alt="YourLife">
     			</div>
-    		</div>
-    		<div class="row_2">
-    			<div class="describe">
-    				<h2>Rock paper scissors - Game</h2>
-    				<p>A classic game of stone, paper and scissors written in JS using Twitter Bootstrap. The game consists of any number of rounds. The end 		of the game is when one of the players scores 10 points, the draw does not give points, and the win gives 1 point for the winner of the 	round.</p>
-    			</div>
     			<div class="picture">
     				<div class="layer_gal">
-   						<i class="fa fa-search"></i>
-						<i class="fa fa-eye"></i>
+  						<h2>Rock paper scissors - Game</h2>
+    					<p>
+    						A classic game of stone, paper and scissors written in JS using Twitter Bootstrap. The game consists of any number of rounds. The end 	of the game is when one of the players scores 10 points, the draw does not give points, and the win gives 1 point for the winner of the	round.
+    					</p>
+    					<i class="fa fa-search fa-2x"></i>
+						<i class="fa fa-eye fa-2x"></i>
   					</div>
     				<img src="./img/project3.jpg" alt="Rock paper scissors Game">
     			</div>
     		</div>
     		<div class="row_2">
-    			<div class="describe">
-    				<h2>ToDo List</h2>
-    				<p>Application written in ReactJS using Webpack</p>
-    			</div>
     			<div class="picture">
     				<div class="layer_gal">
-   						<i class="fa fa-search"></i>
-						<i class="fa fa-eye"></i>
+   						<h2>ToDo List</h2>
+    					<p>
+    						Application written in ReactJS using Webpack.
+    					</p>
+    					<i class="fa fa-search fa-2x"></i>
+						<i class="fa fa-eye fa-2x"></i>
   					</div>
     				<img src="./img/project7.jpg" alt="css">
     			</div>
-    		</div>
-    		<div class="row_2">
-    			<div class="describe">
-    				<h2>ChatApp</h2>
-    				<p>ChatApp application written in ReactJS using NodeJS, ExpressJS and Socket.io libraries</p>
-    			</div>
     			<div class="picture">
     				<div class="layer_gal">
-   						<i class="fa fa-search"></i>
-						<i class="fa fa-eye"></i>
+   						<h2>ChatApp</h2>
+    					<p>
+    						ChatApp application written in ReactJS using NodeJS, ExpressJS and Socket.io libraries.
+    					</p>
+    					<i class="fa fa-search fa-2x"></i>
+						<i class="fa fa-eye fa-2x"></i>
   					</div>
     				<img src="./img/project4.jpg" alt="css">
     			</div>
