Add contact, format files

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>MagdaBalun Front-end Dev</title>
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
@@ -11,7 +12,7 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<nav class="navbar nnavbar-dark">
+	<nav class="navbar navbar-dark">
 		<div class="navbar-header">
         	<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
             	<span class="sr-only">Toggle navigation</span>
@@ -33,7 +34,6 @@
 	</nav>
 	<section id="home" class="jumbotron">
 		<div class="container jumbo">
-			<div class="container jumbotron_img"></div>
 			<div class="container slogan">
 				<h1>Front-end</h1>
 				<h2>developer<h2>
@@ -118,116 +118,128 @@
    		</div>
 	</section>
 	<section id="works" class="my_project">
-		<h2>My project</h2>
-		<div class="container project">
-    		<div class="row_2">
-    			<div class="picture">
-    				<div class="layer_gal">
-   						<h2>My Web Site</h2>
-    					<p>
-    						Website made by me. Used technologies: HTML5, CSS3, JS
-    					</p>
-    					<i class="fa fa-search fa-2x"></i>
-						<i class="fa fa-eye fa-2x"></i>
-  					</div>
-    				<img src="./img/project1.jpg" alt="My web site">
+		<div class="project_item">
+			<h2>My project</h2>
+			<div class="container project">
+    			<div class="row_2">
+    				<div class="picture">
+    					<div class="layer_gal">
+   							<h2>My Web Site</h2>
+    						<p>
+    							Website made by me. Used technologies: HTML5, CSS3, JS
+    						</p>
+    						<i class="fa fa-search fa-2x"></i>
+							<i class="fa fa-eye fa-2x"></i>
+  						</div>
+    					<img src="./img/project1.jpg" alt="My web site">
+    				</div>
+    				<div class="picture">
+    					<div class="layer_gal">
+   							<h2>Picture Perfect</h2>
+    						<p>
+    							The first independent project to encode the .psd file to HTML / CSS template. 
+    							Applied technologies: HTML, CSS, RWD, GRID.
+    						</p>
+    						<i class="fa fa-search fa-2x"></i>
+							<i class="fa fa-eye fa-2x"></i>
+  						</div>
+    					<img src="./img/project1.jpg" alt="PicturePerfect">
+    				</div>
     			</div>
-    			<div class="picture">
-    				<div class="layer_gal">
-   						<h2>Picture Perfect</h2>
-    					<p>
-    						The first independent project to encode the .psd file to HTML / CSS template. 
-    						Applied technologies: HTML, CSS, RWD, GRID.
-    					</p>
-    					<i class="fa fa-search fa-2x"></i>
-						<i class="fa fa-eye fa-2x"></i>
-  					</div>
-    				<img src="./img/project1.jpg" alt="PicturePerfect">
+    			<div class="row_2">
+    				<div class="picture">
+    					<div class="layer_gal">
+   							<h2>Your Life</h2>
+    						<p>
+    							The independent project to encode the .psd file to HTML/CSS and JavaScript template. 
+    							Applied technologies: HTML, CSS, RWD, GRID, JavaScript.
+    						</p>
+    						<i class="fa fa-search fa-2x"></i>
+							<i class="fa fa-eye fa-2x"></i>
+  						</div>
+    					<img src="./img/project2.jpg" alt="YourLife">
+    				</div>
+    				<div class="picture">
+    					<div class="layer_gal">
+  							<h2>Rock paper scissors - Game</h2>
+    						<p>
+    							A classic game of stone, paper and scissors written in JS using Twitter Bootstrap. The game consists of any number of rounds. The end 	of the game is when one of the players scores 10 points, the draw does not give points, and the win gives 1 point for the winner of the	round.
+    						</p>
+    						<i class="fa fa-search fa-2x"></i>
+							<i class="fa fa-eye fa-2x"></i>
+  						</div>
+    					<img src="./img/project3.jpg" alt="Rock paper scissors Game">
+    				</div>
     			</div>
-    		</div>
-    		<div class="row_2">
-    			<div class="picture">
-    				<div class="layer_gal">
-   						<h2>Your Life</h2>
-    					<p>
-    						The independent project to encode the .psd file to HTML/CSS and JavaScript template. 
-    						Applied technologies: HTML, CSS, RWD, GRID, JavaScript.
-    					</p>
-    					<i class="fa fa-search fa-2x"></i>
-						<i class="fa fa-eye fa-2x"></i>
-  					</div>
-    				<img src="./img/project2.jpg" alt="YourLife">
+    			<div class="row_2">
+    				<div class="picture">
+    					<div class="layer_gal">
+   							<h2>ToDo List</h2>
+    						<p>
+    							Application written in ReactJS using Webpack.
+    						</p>
+    						<i class="fa fa-search fa-2x"></i>
+							<i class="fa fa-eye fa-2x"></i>
+  						</div>
+    					<img src="./img/project7.jpg" alt="css">
+    				</div>
+    				<div class="picture">
+    					<div class="layer_gal">
+   							<h2>ChatApp</h2>
+    						<p>
+    							ChatApp application written in ReactJS using NodeJS, ExpressJS and Socket.io libraries.
+    						</p>
+    						<i class="fa fa-search fa-2x"></i>
+							<i class="fa fa-eye fa-2x"></i>
+  						</div>
+    					<img src="./img/project4.jpg" alt="css">
+    				</div>
     			</div>
-    			<div class="picture">
-    				<div class="layer_gal">
-  						<h2>Rock paper scissors - Game</h2>
-    					<p>
-    						A classic game of stone, paper and scissors written in JS using Twitter Bootstrap. The game consists of any number of rounds. The end 	of the game is when one of the players scores 10 points, the draw does not give points, and the win gives 1 point for the winner of the	round.
-    					</p>
-    					<i class="fa fa-search fa-2x"></i>
-						<i class="fa fa-eye fa-2x"></i>
-  					</div>
-    				<img src="./img/project3.jpg" alt="Rock paper scissors Game">
-    			</div>
-    		</div>
-    		<div class="row_2">
-    			<div class="picture">
-    				<div class="layer_gal">
-   						<h2>ToDo List</h2>
-    					<p>
-    						Application written in ReactJS using Webpack.
-    					</p>
-    					<i class="fa fa-search fa-2x"></i>
-						<i class="fa fa-eye fa-2x"></i>
-  					</div>
-    				<img src="./img/project7.jpg" alt="css">
-    			</div>
-    			<div class="picture">
-    				<div class="layer_gal">
-   						<h2>ChatApp</h2>
-    					<p>
-    						ChatApp application written in ReactJS using NodeJS, ExpressJS and Socket.io libraries.
-    					</p>
-    					<i class="fa fa-search fa-2x"></i>
-						<i class="fa fa-eye fa-2x"></i>
-  					</div>
-    				<img src="./img/project4.jpg" alt="css">
-    			</div>
-    		</div>
+   			</div>
    		</div>
 	</section>
 	<section id="contact" class="contact">
-		<div class="row_3">
+		<h2>Contact</h2>
+		<div class="row">
+			<div class="col col-6 col-m-6 col-s-12 contact_form">
     			<div class="form">
-    				<h2>Write me</h2>
-    				<form></form>
-    				<button></button>
-    			</div>
-    			<div class="data">
-    				<div class="phone_nr">
-   						<p>518 643 299<p>
-  					</div>
-    			</div>
-    			<div class="email">
-    				<div class="phone_nr">
-   						<p>magdalena.balun@gmail.com<p>
-  					</div>
-    			</div>
-    			<div class="icon">
-    				<div class="social_media">
-   						<a href="" target="_blank" class="contact__link footer__link--cv">cv</a>
-                        <a href="" target="_blank" class="contact__link"><i class="fab fa-linkedin-in"></i></a>
-                        <a href="" target="_blank" class="contact__link"><i class="fab fa-github"></i></a>
-  					</div>
-    			</div>
+    		    	<h3 class="contact_title">Send a message</h3>
+                    <form action="https://formspree.io/magdalena.balun@gmail.com" method="POST">
+    					<div class="form-group">
+         					<input type="email" class="form-control" placeholder="Enter email">
+    					</div>
+    					<div class="form-group">
+            				<textarea class="form-control" rows="5" placeholder="Enter message"></textarea>
+    					</div>
+        				<button type="submit" class="btn btn-success">Submit</button>
+  					</form>
+                </div>
     		</div>
+    	    <div class="col col-6 col-m-6 col-s-12 contact_data">
+    			<div class="data">
+    				<div class="data_1 email">
+    					<h3><i class="far fa-envelope fa-2x"></i></h3>
+    					<p>magdalena.balun@gmail.com<p>
+  					</div>
+  					<div class="data_1 phone_nr">
+  						<h3><i class="fas fa-phone fa-2x"></i></h3>
+    					<p>+48 518 643 299<p>
+  					</div>
+    				<div class="data_1 icons">
+    					<a href="https://www.linkedin.com/in/magdalena-balun-28b99812/"><i class="fab fa-linkedin-in fa-2x"></i></a>
+    					<a href="https://github.com/MagBal"><i class="fab fa-github fa-2x"></i></a>
+    					<a href="files/CV.pdf">CV</a>
+                    </div>
+  				</div>
+    		</div>
+    	</div>
 	</section>
-	<section>
-		<footer>
+	<section class="footer">
+		<div class="container _footer">
 			<p>Copywright&copy 2018 by Magda Balun</p>
-			<div><i class="fab fa-e-mail"></i>magdalena.balun@gmail.com</div>
-			<div><i class="fab fa-phone"></i>+48 518643299</div>
-		</footer>
+			<p>magdalena.balun@gmail.com</p>
+			<p><i class="fas fa-phone"></i>+48 518643299</p>
+		</div>
 	</section>
 	<!-- <script src="scripts.js"></script> -->
 </body>
