--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
     				<div class="data_1 icons">
     					<a href="https://www.linkedin.com/in/magdalena-balun-28b99812/"><i class="fab fa-linkedin-in fa-2x"></i></a>
     					<a href="https://github.com/MagBal"><i class="fab fa-github fa-2x"></i></a>
-    					<a href="files/CV.pdf">CV</a>
+    					<a href="https://github.com/MagBal/Portfolio/blob/master/CV/Magda_Balun_CV.pdf">CV</a>
                     </div>
   				</div>
     		</div>
