--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 <body>
 	
 	<section id="home" class="jumbotron">
-		<div class="container">
-            <nav id="nav" class="navbar navbar-dark navbar-fixed-top">
+        <div class="container">
+            <nav id="nav" class="navbar navbar-dark">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
                         <span class="sr-only">Toggle navigation</span>
@@ -23,11 +23,11 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">MB</a>
+                    <div class="logo">MB</div>
                 </div>
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
-                        <li><a href="#home">Home</a></li>
+                        <!-- <li><a href="#home">Home</a></li> -->
                         <li><a href="#aboutMe">About me</a></li>
                         <li><a href="#skills">Skills</a></li>
                         <li><a href="#works">Works</a></li>
@@ -42,7 +42,8 @@
 				<p>Magda Balun</p>
 			</div>
 		</div>
-        <div id="startchange"></div>
+        <!-- <div id="startchange"></div> -->
+
     </section>
     <section id="aboutMe" class="about_Me">
 		<div class="row about">
@@ -130,12 +131,12 @@
     					<div class="layer_gal">
    							<h2>My Web Site</h2>
     						<p>
-    							Website made by me. Used technologies: HTML5, CSS3, JS
+    							Website made by me. Used technologies: HTML5, CSS3, Bootstrap, JS, jQuery
     						</p>
-    						<i class="fa fa-search fa-2x"></i>
-							<i class="fa fa-eye fa-2x"></i>
+    						<a href="https://github.com/MagBal/Portfolio"><i class="fab fa-github fa-2x"></i></a>
+							<a href="https://magbal.github.io/Portfolio/"><i class="fa fa-eye fa-2x"></i></a>
   						</div>
-    					<img src="./img/project1.jpg" alt="My web site">
+    					<img src="./img/project8.jpg" alt="My web site">
     				</div>
     				<div class="picture">
     					<div class="layer_gal">
@@ -144,8 +145,8 @@
     							The first independent project to encode the .psd file to HTML / CSS template. 
     							Applied technologies: HTML, CSS, RWD, GRID.
     						</p>
-    						<i class="fa fa-search fa-2x"></i>
-							<i class="fa fa-eye fa-2x"></i>
+    						<a href="https://github.com/MagBal/PicturePerfect"><i class="fab fa-github fa-2x"></i></a>
+							<a href="https://magbal.github.io/PicturePerfect/"><i class="fa fa-eye fa-2x"></i></a>
   						</div>
     					<img src="./img/project1.jpg" alt="PicturePerfect">
     				</div>
@@ -158,8 +159,8 @@
     							The independent project to encode the .psd file to HTML/CSS and JavaScript template. 
     							Applied technologies: HTML, CSS, RWD, GRID, JavaScript.
     						</p>
-    						<i class="fa fa-search fa-2x"></i>
-							<i class="fa fa-eye fa-2x"></i>
+    						<a href="https://github.com/MagBal/Your-Life"><i class="fab fa-github fa-2x"></i></a>
+							<a href="https://magbal.github.io/Your-Life/"><i class="fa fa-eye fa-2x"></i></a>
   						</div>
     					<img src="./img/project2.jpg" alt="YourLife">
     				</div>
@@ -169,8 +170,8 @@
     						<p>
     							A classic game of stone, paper and scissors written in JS using Twitter Bootstrap. The game consists of any number of rounds. The end 	of the game is when one of the players scores 10 points, the draw does not give points, and the win gives 1 point for the winner of the	round.
     						</p>
-    						<i class="fa fa-search fa-2x"></i>
-							<i class="fa fa-eye fa-2x"></i>
+    						<a href="https://github.com/MagBal/Rock-Paper-Scissors-JS-Game"><i class="fab fa-github fa-2x"></i></a>
+							<a href="https://magbal.github.io/Rock-Paper-Scissors-JS-Game/"><i class="fa fa-eye fa-2x"></i></a>
   						</div>
     					<img src="./img/project3.jpg" alt="Rock paper scissors Game">
     				</div>
@@ -182,8 +183,8 @@
     						<p>
     							Application written in ReactJS using Webpack.
     						</p>
-    						<i class="fa fa-search fa-2x"></i>
-							<i class="fa fa-eye fa-2x"></i>
+    						<a href="https://github.com/MagBal/ToDo-List"><i class="fab fa-github fa-2x"></i></a>
+							<a href=""><i class="fa fa-eye fa-2x"></i></a>
   						</div>
     					<img src="./img/project7.jpg" alt="css">
     				</div>
@@ -193,8 +194,8 @@
     						<p>
     							ChatApp application written in ReactJS using NodeJS, ExpressJS and Socket.io libraries.
     						</p>
-    						<i class="fa fa-search fa-2x"></i>
-							<i class="fa fa-eye fa-2x"></i>
+    						<a href="https://github.com/MagBal/ChatApp"><i class="fab fa-github fa-2x"></i></a>
+							<a href=""><i class="fa fa-eye fa-2x"></i></a>
   						</div>
     					<img src="./img/project4.jpg" alt="css">
     				</div>
@@ -246,10 +247,9 @@
             </div>
             <div class="foot2">
                 <p>Copywright &copy 2018 by Magda Balun</p>
-                <a href="https://www.linkedin.com/in/magdalena-balun-28b99812/"><i class="fab fa-linkedin-in fa-lg"></i></a>
+                <a href="https://www.linkedin.com/in/magdalena-balun-28b99812/"><i class="fab fa-linkedin-in fa-2x"></i></a>
                 <a href="https://github.com/MagBal"><i class="fab fa-github fa-lg"></i></a>
-                <a href="https://github.com/MagBal/Portfolio/blob/master/CV/Magda_Balun_CV.pdf">CV</a>
-		    </div>
+            </div>
         </div>
 	</section>
 	
@@ -257,5 +257,6 @@
     integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
     crossorigin="anonymous"></script>
     <script src="script.js"></script>
+    <a href="#" title="Up" id="scroll-to-top"><i class="fa fa-chevron-circle-up fa-4x"></i></a>
 </body>
 </html>
