--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     					<div class="layer_gal">
    							<h2>My Web Site</h2>
     						<p>
-    							Website made by me. Used technologies: HTML5, CSS3, Bootstrap, JS, jQuery
+    							My personal website coded by myself. Applied technologies: HTML5, CSS3, Bootstrap, JS, jQuery.
     						</p>
     						<a href="https://github.com/MagBal/Portfolio"><i class="fab fa-github fa-2x"></i></a>
 							<a href="https://magbal.github.io/Portfolio/"><i class="fa fa-eye fa-2x"></i></a>
